--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"-Dhttps.protocols=TLSv1.2
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+kotlin.daemon.enabled=false
 
 #Kotlin
 kotlin.code.style=official
