cross-platform configure

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,16 @@
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx4096M"-Dhttps.protocols=TLSv1.2,TLSv1.3
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 kotlin.daemon.enabled=false
 
 #Kotlin
 kotlin.code.style=official
+# Turn off config cache globally (you can revert later)
+#org.gradle.configuration-cache=false
+# (older AGP sometimes reads this key)
+org.gradle.unsafe.configuration-cache=false
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 
 #Android
 android.useAndroidX=true
